@@ -1,12 +1,0 @@
-#!/bin/sh
-#
-# This is a part of FireGPG.
-#
-# Syntax: linux.sh <program_name> <output_file> [arguments]
-#
-
-prog="$1"; shift
-out="$1"; shift
-arg="$@"
-
-$prog $arg > $out
